tests/aster/x/mochi/rosetta/crc-32-2.error
error[A024]: unknown function indexOf
  --> /workspace/mochi/tests/rosetta/x/Mochi/crc-32-2.mochi:30:13

 30 |   var idx = indexOf(upper, ch)
    |             ^

help:
  Declare indexOf before use
